--- a/checkout.html
+++ b/checkout.html
@@ -235,7 +235,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<tr>
 							<th>SL No.</th>	
 							<th>Product</th>
-							<th>Quality</th>
+							<th>Quantity</th>
 							<th>Product Name</th>
 							<th>Service Charges</th>
 							<th>Price</th>
@@ -263,9 +263,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<script>$(document).ready(function(c) {
 								$('.close1').on('click', function(c){
-									$('.rem1').fadeOut('slow', function(c){
-										$('.rem1').remove();
-									});
+									
 									});	  
 								});
 						   </script>
