--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<a href="#" data-toggle="modal" data-target="#myModal88"><img src="images/logo.jpg" alt="Smiley face" width="100" height="100"></a>
 			</div>
 			<div class="w3l_logo">
-				<h1><a href="index.html">Bharat Publications<span>For Competitors</span></a></h1>
+				<h1><a href="index.php">Bharat Publications<span>For Competitors</span></a></h1>
 			</div>
 			<div class="search">
 				<input class="search_box" type="checkbox" id="search_box">
